--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
     ],
     "require": {
         "php": ">=5.4",
-        "hrevert/ht-oauth-client": "0.0.*"
+        "hrevert/ht-oauth-client": "0.0.*",
+        "zendframework/zend-servicemanager": "~2.3",
+        "zendframework/zend-mvc": "~2.3",
+        "zendframework/zend-modulemanager": "~2.3",
+        "zendframework/zend-stdlib": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
