--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,17 @@
     ],
     "require": {
         "php": ">=5.4",
-        "hrevert/ht-oauth-client": "0.0.*",
+        "hrevert/ht-oauth-client": "dev-feature/zend-db",
         "zendframework/zend-servicemanager": "~2.3",
         "zendframework/zend-mvc": "~2.3",
         "zendframework/zend-modulemanager": "~2.3",
         "zendframework/zend-stdlib": "~2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "4.*",
+        "doctrine/common": "~2.1",
+        "zendframework/zend-db": "~2.3",
+        "zf-commons/zfc-base": "0.1.*"
     },
     "autoload": {
         "psr-4": {
